--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/LccNetwork.Bootstrap.csproj
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/LccNetwork.Bootstrap.csproj
@@ -71,6 +71,7 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\favicon.ico" />
     <Content Include="Styles\Bootstrap\less\variables.min.css">
       <DependentUpon>variables.less</DependentUpon>
     </Content>
@@ -163,6 +164,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Extensions\MyFunctions.cs" />
+    <Compile Include="FaviconShapes.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Styles\Bootstrap\less\buttons.less" />
