--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/Themes.csproj
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/Themes.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -59,6 +59,19 @@
       <HintPath>..\..\..\lib\aspnetmvc\System.Web.Mvc.dll</HintPath>
     </Reference>
     <Reference Include="System.Xml.Linq" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="SingularBiogenics.Bootstrap\Web.config" />
+    <Content Include="SingularBiogenics.Bootstrap\Scripts\Web.config" />
+    <Content Include="SingularBiogenics.Bootstrap\Styles\Web.config" />
+    <Content Include="SingularBiogenics.Bootstrap\Content\Web.config" />
+    <Content Include="SingularBiogenics.Bootstrap\Theme.txt" />
+    <Content Include="SingularBiogenics.Bootstrap\Theme.png" />
+    <Content Include="SingularBiogenics.Bootstrap\Placement.info" />
+    <Folder Include="SingularBiogenics.Bootstrap\Content" />
+    <Folder Include="SingularBiogenics.Bootstrap\Styles" />
+    <Folder Include="SingularBiogenics.Bootstrap\Scripts" />
+    <Folder Include="SingularBiogenics.Bootstrap\Views" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
