--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/Themes.csproj
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/Themes.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -61,6 +61,15 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="SingularBiogenics.Bootstrap\Content\favicon.ico" />
+    <Content Include="SingularBiogenics.Bootstrap\Content\Logo.jpg" />
+    <Content Include="SingularBiogenics.Bootstrap\Styles\bootstrap-theme.min.css" />
+    <Content Include="SingularBiogenics.Bootstrap\Styles\Theme.css">
+      <DependentUpon>Theme.less</DependentUpon>
+    </Content>
+    <Content Include="SingularBiogenics.Bootstrap\Styles\Theme.min.css">
+      <DependentUpon>Theme.less</DependentUpon>
+    </Content>
     <Content Include="SingularBiogenics.Bootstrap\Web.config" />
     <Content Include="SingularBiogenics.Bootstrap\Scripts\Web.config" />
     <Content Include="SingularBiogenics.Bootstrap\Styles\Web.config" />
@@ -68,10 +77,6 @@
     <Content Include="SingularBiogenics.Bootstrap\Theme.txt" />
     <Content Include="SingularBiogenics.Bootstrap\Theme.png" />
     <Content Include="SingularBiogenics.Bootstrap\Placement.info" />
-    <Folder Include="SingularBiogenics.Bootstrap\Content" />
-    <Folder Include="SingularBiogenics.Bootstrap\Styles" />
-    <Folder Include="SingularBiogenics.Bootstrap\Scripts" />
-    <Folder Include="SingularBiogenics.Bootstrap\Views" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -287,6 +292,17 @@
     <Content Include="SingularBiogenics\Views\Layout.cshtml" />
     <Content Include="SingularBiogenics\Views\LogOn.cshtml" />
     <Content Include="SingularBiogenics\Web.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="SingularBiogenics.Bootstrap\Views\Branding.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="SingularBiogenics.Bootstrap\Styles\Theme.less" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="SingularBiogenics.Bootstrap\Styles\Theme.css.map">
+      <DependentUpon>Theme.css</DependentUpon>
+    </Content>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
