--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/Bootstrap_3_2_0_Base/Web.config
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/Bootstrap_3_2_0_Base/Web.config
@@ -45,8 +45,14 @@
   <system.webServer>
     <staticContent>
       <!--The mimeMaps only have to be in the base theme not the child themes.-->
-      <remove fileExtension=".woff"/>
-      <mimeMap fileExtension=".woff" mimeType="font/x-woff"/>
+      <remove fileExtension=".eot" />
+      <remove fileExtension=".otf"/>
+      <remove fileExtension=".woff" />
+      <remove fileExtension=".svg" />
+      <mimeMap fileExtension=".eot" mimeType="application/vnd.ms-fontobject" />
+      <mimeMap fileExtension=".otf" mimeType="font/otf" />
+      <mimeMap fileExtension=".woff" mimeType="font/x-woff" />
+      <mimeMap fileExtension=".svg" mimeType="image/svg+xml" />
     </staticContent>
   </system.webServer>
 </configuration>
