--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/Bootstrap_3_2_0_Base/Bootstrap_3_2_0_Base.csproj
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/Bootstrap_3_2_0_Base/Bootstrap_3_2_0_Base.csproj
@@ -81,6 +81,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\favicon.ico" />
     <Content Include="Content\Web.config" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\theme.js" />
@@ -232,7 +233,8 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ResourceManifest.cs" />
+    <Compile Include="Providers\ResourceManifest.cs" />
+    <Compile Include="Providers\ShapeTable.cs" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
