--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/Themes.csproj
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/Themes.csproj
@@ -61,22 +61,22 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="SingularBiogenics.Bootstrap\Content\favicon.ico" />
-    <Content Include="SingularBiogenics.Bootstrap\Content\Logo.jpg" />
-    <Content Include="SingularBiogenics.Bootstrap\Styles\bootstrap-theme.min.css" />
-    <Content Include="SingularBiogenics.Bootstrap\Styles\Theme.css">
+    <Content Include="Bootstrap_3_2_0_SingularBio\Content\favicon.ico" />
+    <Content Include="Bootstrap_3_2_0_SingularBio\Content\Logo.jpg" />
+    <Content Include="Bootstrap_3_2_0_SingularBio\Styles\bootstrap-theme.min.css" />
+    <Content Include="Bootstrap_3_2_0_SingularBio\Styles\Theme.css">
       <DependentUpon>Theme.less</DependentUpon>
     </Content>
-    <Content Include="SingularBiogenics.Bootstrap\Styles\Theme.min.css">
+    <Content Include="Bootstrap_3_2_0_SingularBio\Styles\Theme.min.css">
       <DependentUpon>Theme.less</DependentUpon>
     </Content>
-    <Content Include="SingularBiogenics.Bootstrap\Web.config" />
-    <Content Include="SingularBiogenics.Bootstrap\Scripts\Web.config" />
-    <Content Include="SingularBiogenics.Bootstrap\Styles\Web.config" />
-    <Content Include="SingularBiogenics.Bootstrap\Content\Web.config" />
-    <Content Include="SingularBiogenics.Bootstrap\Theme.txt" />
-    <Content Include="SingularBiogenics.Bootstrap\Theme.png" />
-    <Content Include="SingularBiogenics.Bootstrap\Placement.info" />
+    <Content Include="Bootstrap_3_2_0_SingularBio\Web.config" />
+    <Content Include="Bootstrap_3_2_0_SingularBio\Scripts\Web.config" />
+    <Content Include="Bootstrap_3_2_0_SingularBio\Styles\Web.config" />
+    <Content Include="Bootstrap_3_2_0_SingularBio\Content\Web.config" />
+    <Content Include="Bootstrap_3_2_0_SingularBio\Theme.txt" />
+    <Content Include="Bootstrap_3_2_0_SingularBio\Theme.png" />
+    <Content Include="Bootstrap_3_2_0_SingularBio\Placement.info" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -92,12 +92,6 @@
     <Content Include="Bootstrap_3_1_1_KongwaHill\Styles\Site.css" />
     <Content Include="Bootstrap_3_1_1_KongwaHill\Theme.png" />
     <Content Include="Bootstrap_3_1_1_KongwaHill\Theme.txt" />
-    <Content Include="SingularBiogenics\Content\favicon.ico" />
-    <Content Include="SingularBiogenics\Content\Logo.jpg" />
-    <Content Include="SingularBiogenics\Styles\bootstrap-theme.min.css" />
-    <Content Include="SingularBiogenics\Styles\Site.css" />
-    <Content Include="SingularBiogenics\Theme.png" />
-    <Content Include="SingularBiogenics\Theme.txt" />
     <Content Include="TheAdmin\Scripts\admin.js" />
     <Content Include="TheAdmin\Styles\ie.css" />
     <Content Include="TheAdmin\Styles\ie7.css" />
@@ -283,24 +277,13 @@
     <Folder Include="Bootstrap_3_1_1_GardenFaire\Views\" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="SingularBiogenics\Content\Web.config" />
-    <Content Include="SingularBiogenics\Placement.info" />
-    <Content Include="SingularBiogenics\Scripts\Web.config" />
-    <Content Include="SingularBiogenics\Styles\Web.config" />
-    <Content Include="SingularBiogenics\Views\Content.cshtml" />
-    <Content Include="SingularBiogenics\Views\Document.cshtml" />
-    <Content Include="SingularBiogenics\Views\Layout.cshtml" />
-    <Content Include="SingularBiogenics\Views\LogOn.cshtml" />
-    <Content Include="SingularBiogenics\Web.config" />
+    <Content Include="Bootstrap_3_2_0_SingularBio\Views\Branding.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="SingularBiogenics.Bootstrap\Views\Branding.cshtml" />
+    <Content Include="Bootstrap_3_2_0_SingularBio\Styles\Theme.less" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="SingularBiogenics.Bootstrap\Styles\Theme.less" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="SingularBiogenics.Bootstrap\Styles\Theme.css.map">
+    <Content Include="Bootstrap_3_2_0_SingularBio\Styles\Theme.css.map">
       <DependentUpon>Theme.css</DependentUpon>
     </Content>
   </ItemGroup>
