--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/Bootstrap_3_2_0_SimpleBlog/Bootstrap_3_2_0_SimpleBlog.csproj
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/Bootstrap_3_2_0_SimpleBlog/Bootstrap_3_2_0_SimpleBlog.csproj
@@ -325,6 +325,9 @@
     <Compile Include="ListShapeProvider.cs" />
     <Compile Include="ResourceManifest.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Parts.Search.SearchForm.cshtml" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
